2011-09-02  Armando Basile  <hmandevteam@gmail.com>

	* Src/Classes/GlobalObj.cs: - using comex-base for share
	folder search path

2011-09-02  Armando Basile  <hmandevteam@gmail.com>

	* Src/Classes/GlobalObj.cs: - fix: search path of languages
	folder
